# ultrahonk_soroban_contract

./: .env  Cargo.toml  README.md
.config/stellar/: upgrade_check.json
.config/stellar/contract-ids/: guess_the_puzzle-noir.json  ultrahonk_soroban_contract-noir.json
.config/stellar/identity/: noir.toml
.config/stellar/network/: noir.toml
contracts/guess-the-puzzle/: Cargo.toml
contracts/guess-the-puzzle/src/: lib.rs
contracts/ultrahonk-soroban-contract/: Cargo.toml
contracts/ultrahonk-soroban-contract/src/: lib.rs
src/components/: ConnectAccount.tsx  ContractConfig.tsx  NetworkPill.tsx  NetworkSwitcher.tsx  PrizePool.tsx  Sudoku.tsx
src/contexts/: PrizePoolContext.tsx
src/contracts/: guess_the_puzzle.ts  ultrahonk_soroban_contract.ts  util.ts
src/hooks/: useSubscription.ts
src/services/: StellarContractService.ts
src/util/: friendbot.ts  storage.ts  wallet.ts
