[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
authors = ["AhaLabs"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tupui/ultrahonk_soroban_contract"
version = "1.0.0"

[workspace.dependencies.soroban-sdk]
git = "https://github.com/stellar/rs-soroban-sdk.git"
rev = "acffbbd45be6a0a551146eebfc268d6f95078246"

[profile.release]
opt-level = "z"
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true

[profile.release-with-logs]
debug-assertions = true
inherits = "release"
