[package]
name = "ultrahonk_soroban_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, default-features = false, features = ["alloc"] }
ultrahonk_soroban_verifier = { git = "https://github.com/yugocabrio/ultrahonk-rust-verifier.git", package = "ultrahonk_soroban_verifier", default-features = false, features = ["alloc"] }
sha3 = { version = "0.10", default-features = false }

[dev-dependencies]
# Enable test helpers for local unit tests
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
soroban-env-host = { git = "https://github.com/stellar/rs-soroban-env", rev = "cf58d535ab05d02802a5e804a95524650f8c62c7" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.stellar]
cargo_inherit = true
